Fix accessibility issues: improve contrast ratios, add About section, enhance loading messages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-12">
                 <h1 class="text-center mb-4">MUT Improv Games Database</h1>
-                <p class="text-center text-muted mb-4">Discover and search through our collection of improv games</p>
+                <p class="text-center text-secondary mb-4">Discover and search through our collection of improv games</p>
             </div>
         </div>
 
@@ -76,7 +76,7 @@
         <!-- Results Info -->
         <div class="row mb-3">
             <div class="col-12">
-                <p id="resultsInfo" class="text-muted">Loading games...</p>
+                <p id="resultsInfo" class="text-secondary">Discovering improv games...</p>
             </div>
         </div>
 
@@ -89,6 +89,56 @@
         <div class="text-center mt-4" id="loadingSpinner">
             <div class="spinner-border text-primary" role="status">
                 <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
+
+    <!-- About Section -->
+    <div id="about" class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="game-section">
+                    <h2 class="text-center mb-4">About MUT Improv Games</h2>
+                    <p class="text-secondary mb-4">
+                        The MUT Improv Games Database is a comprehensive collection of improv theater games, meticulously curated for the improv community.
+                        Whether you're a beginner looking for simple warm-up exercises or an experienced improviser seeking advanced techniques,
+                        our database provides detailed instructions, tips, and examples for each game.
+                    </p>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4>What You'll Find</h4>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• 232+ carefully documented improv games</li>
+                                <li class="mb-2">• Player count recommendations</li>
+                                <li class="mb-2">• Difficulty levels and setup instructions</li>
+                                <li class="mb-2">• Tips from experienced improvisers</li>
+                                <li class="mb-2">• Video examples and demonstrations</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <h4>Game Categories</h4>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• Opening Games - High-energy starters</li>
+                                <li class="mb-2">• Audience Games - Interactive experiences</li>
+                                <li class="mb-2">• Host Interrupt Games - Dynamic challenges</li>
+                                <li class="mb-2">• Justification Games - Creative constraints</li>
+                                <li class="mb-2">• Scene Games - Traditional improv formats</li>
+                                <li class="mb-2">• And many more...</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="text-center mt-4">
+                        <p class="text-secondary mb-3">
+                            Built with ❤️ for the improv community. This database is designed to help improvisers of all levels
+                            discover new games, learn proper techniques, and enhance their performances.
+                        </p>
+                        <p class="text-muted">
+                            <small>Database last updated: January 2026 | Version 1.0</small>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
